--- a/ListViewHeaderDemo/ListViewHeaderDemo.Shared/MainPage.xaml
+++ b/ListViewHeaderDemo/ListViewHeaderDemo.Shared/MainPage.xaml
@@ -3,11 +3,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ListViewHeaderDemo"
+		xmlns:toolkit="using:Uno.UI.Toolkit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-		<TextBlock Text="Hello, world !" Margin="20" FontSize="30" />
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+					DataContext="This is the parent DataContext">
+			<ListView toolkit:VisibleBoundsPadding.PaddingMask="Top">
+				<ListView.Header>
+					<StackPanel>
+						<TextBlock Text="DataContext"/>
+						<TextBlock Text="{Binding}"/>
+					</StackPanel>
+				</ListView.Header>
+			</ListView>
     </Grid>
 </Page>
